include/trs.h


struct trs_control_type {
    bool f_indexing;
    int error;
    int out;
    int problem;
    int print_level;
    int dense_factorization;
    int new_h;
    int new_m;
    int new_a;
    int max_factorizations;
    int inverse_itmax;
    int taylor_max_degree;
    real_wp_ initial_multiplier;
    real_wp_ lower;
    real_wp_ upper;
    real_wp_ stop_normal;
    real_wp_ stop_absolute_normal;
    real_wp_ stop_hard;
    real_wp_ start_invit_tol;
    real_wp_ start_invitmax_tol;
    bool equality_problem;
    bool use_initial_multiplier;
    bool initialize_approx_eigenvector;
    bool force_Newton;
    bool space_critical;
    bool deallocate_error_fatal;
    char problem_file[31];
    char symmetric_linear_solver[31];
    char definite_linear_solver[31];
    char prefix[31];
    struct sls_control_type sls_control;
    struct ir_control_type ir_control;
};
struct trs_time_type {
    real_wp_ total;
    real_wp_ assemble;
    real_wp_ analyse;
    real_wp_ factorize;
    real_wp_ solve;
    real_wp_ clock_total;
    real_wp_ clock_assemble;
    real_wp_ clock_analyse;
    real_wp_ clock_factorize;
    real_wp_ clock_solve;
};
struct trs_history_type {
    real_wp_ lambda;
    real_wp_ x_norm;
};
struct trs_inform_type {
    int status;
    int alloc_status;
    int factorizations;
    int max_entries_factors;
    int len_history;
    real_wp_ obj;
    real_wp_ x_norm;
    real_wp_ multiplier;
    real_wp_ pole;
    bool dense_factorization;
    bool hard_case;
    char bad_alloc[81];
    struct trs_time_type time;
    struct trs_history_type history[100];
    struct sls_inform_type sls_inform;
    struct ir_inform_type ir_inform;
};
void trs_initialize( void **data, 
                     struct trs_control_type *control,
                     int *status );
void trs_read_specfile( struct trs_control_type *control, 
                        const char specfile[] );
void trs_import( struct trs_control_type *control,
                 void **data,
                 int *status,
                 int n,
                 const char H_type[], 
                 int H_ne, 
                 const int H_row[],
                 const int H_col[], 
                 const int H_ptr[] );
void trs_import_m( void **data,
                   int *status,
                   int n,
                   const char M_type[], 
                   int M_ne, 
                   const int M_row[],
                   const int M_col[], 
                   const int M_ptr[] );
void trs_import_a( void **data,
                   int *status,
                   int m,
                   const char A_type[], 
                   int A_ne, 
                   const int A_row[],
                   const int A_col[], 
                   const int A_ptr[] );
void trs_reset_control( struct trs_control_type *control,
                        void **data,
                        int *status );
void trs_solve_problem( void **data,
                        int *status,
                        int n, 
                        const real_wp_ radius, 
                        const real_wp_ f, 
                        const real_wp_ c[], 
                        int H_ne,
                        const real_wp_ H_val[], 
                        real_wp_ x[], 
                        int M_ne,
                        const real_wp_ M_val[], 
                        int m, 
                        int A_ne,
                        const real_wp_ A_val[],
                        real_wp_ y[] );
void trs_information( void **data,
                      struct trs_inform_type *inform,
                      int *status );
void trs_terminate( void **data, 
                    struct trs_control_type *control, 
                    struct trs_inform_type *inform );